// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExecutionList failure 1`] = `
<div>
  <h3>
    Executions
  </h3>
  <div
    className="alert alert-danger"
    role="alert"
  >
    some error message
  </div>
  <table
    className="table table-striped table-bordered table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Worker
        </th>
        <th>
          Workflow
        </th>
        <th>
          Task
        </th>
        <th>
          Status
        </th>
        <th>
          Start Time
        </th>
        <th>
          Runtime
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          colSpan="6"
        >
          Loading...
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExecutionList loading 1`] = `
<div>
  <h3>
    Executions
  </h3>
  <table
    className="table table-striped table-bordered table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Worker
        </th>
        <th>
          Workflow
        </th>
        <th>
          Task
        </th>
        <th>
          Status
        </th>
        <th>
          Start Time
        </th>
        <th>
          Runtime
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          colSpan="6"
        >
          Loading...
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExecutionList success 1`] = `
<div>
  <h3>
    Executions
  </h3>
  <table
    className="table table-striped table-bordered table-condensed table-hover"
  >
    <thead>
      <tr>
        <th>
          Worker
        </th>
        <th>
          Workflow
        </th>
        <th>
          Task
        </th>
        <th>
          Status
        </th>
        <th>
          Start Time
        </th>
        <th>
          Runtime
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <a
            onClick={[Function]}
            style={Object {}}
          >
            graybeard.local 36594
          </a>
        </td>
        <td>
          Simple Workflow Example
        </td>
        <td>
          <a
            onClick={[Function]}
            style={Object {}}
          >
            done
          </a>
        </td>
        <td>
          succeeded
        </td>
        <td>
          2017-01-30T04:17:47.008524Z
        </td>
        <td>
          0m 0.05s
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
